CHANGELOG

== May 19, 2012
* Fixed Users/Admins Avatar bug
* Allow Users to upload GPG keys
* Send Comment notification using postmarkapp
* Fixed Forms for Twitter-Bootstrap 2.0.7
* Unified Sidebar
* ActiveAdmin fetched upstream master (4.0.4)
* Updated Gems

== May 16, 2012
* Added sitemaps
* Automatic generation of sitemaps in Resque
* Improved Sitemap for news
* Fixed SOLR Resque delete from index 

== May 14, 2012
* Added time left in words for future items (in red color)
* Changed Favicon
* GPLv3 License
* Version 1.0.1
* Better sidebar with horizontal divider
* Remember Selected Category on the Sidebar

== May 13, 2012
* Fixed font size and color for Blockquote
* Made Logo a link to home page
* Decreased box-shadows for a more suttle feeling
* Bigger font on top-navbar
* Removed google-plus dynamic share tracking
* Improved Login modal box
* using LetterOpener for better testing emails
* Added "Submitted by: Author Name" to article emails
* Comment body is set to required(html5)
* Proper Email validation
* Recent Comments added to sidebar
* Top Items in last 90 days added to sidebar
* Asking user registration reason on register page
* minor bug fixes
* more test coverage with Rspec
* Updated TinyMCE
* Updated gems
* Releasing First Version 1.0.0
* Attached License
* added dynamic http_protocol for dev/prod envs

== May 8, 2012
* Downgraded resque-scheduler to 1.9.9
* fixed caching issue if a highlighted item not being first was updated.

== May 6, 2012
* Upgraded to Twitter Bootstrap 2.0
* Added Logo
* Login Model Box

== May 5, 2012
* Updated TinyMCE live editor
* ruby1.9 syntax updates

== May 4, 2012
* Caching Sidebar and Header for 2 hours
* Converted hash syntax to ruby1.9
* Global Caching Time increased from 1 to 2 hours
* Improved true/false fields with html ticker and cross
* Improved Suspicious/Spam Comments on dashboard
* Added Red color to Spam Comments
* Added Orange color to Suspicious Comments