@@ -98,7 +98,7 @@
               <%= link_to "Admin Panel", admin_dashboard_url(protocol: http_protocol) %>
             </li>
             <li>
-              <%= link_to "Resque Queuee", "/resque" %>
+              <%= link_to "Resque Queues", "/resque" %>
             </li>
             <li class="divider"></li>
             <li>
